[metadata]
name = optiflow
version = 0.0.1
description="Inventory optimziation toolset"
long_description = file: README.md
long_description_content_type = text/markdown
url='https://github.com/selewaut/optiflow'
author="Santiago Elewaut"
author_email='santielewaut@gmail.com'
classifiers =
        'Development Status :: 2 - Pre-Alpha'
        'Intended Audience :: Developers'
        'Natural Language :: English'
        'Programming Language :: Python :: 3'
        'Programming Language :: Python :: 3.6'
        'Programming Language :: Python :: 3.7'
        'Programming Language :: Python :: 3.8'

[options]
py_modules = optiflow
python_requires = >=3.10
package_dir =
 = src

tag = True
